--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,9 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 version: 1.0.0+1
-
+analyzer:
+  enable-experiment:
+    - non-nullable
 environment:
   sdk: ">=2.15.1 <3.0.0"
 
@@ -30,6 +32,10 @@ dependencies:
   flutter:
     sdk: flutter
   simple_animations: ^1.3.3
+  datetime_picker_formfield:
+  intl:
+  flutter_localizations:
+    sdk: flutter
 
 
   # The following adds the Cupertino Icons font to your application.
