--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,11 +36,14 @@ dependencies:
   intl:
   flutter_localizations:
     sdk: flutter
+  cupertino_icons: ^1.0.2
+  flutter_launcher_icons:
+
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+
 
 dev_dependencies:
   flutter_test:
@@ -65,6 +68,11 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/icon-9.png"
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
